# plasmoid-visualizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md  TECHNICAL_FAQ.md  TODO.md  build_installer.bat  installer.iss  package.bat  package.sh
Release/shaders/: particles.frag
assets/fonts/: README.md
assets/shaders/: blur.frag  composite.frag  particles.frag  particles.vert  quad.frag  quad.vert  visualizer.frag  visualizer.vert
plasma_widget/: CMakeLists.txt  metadata.json
plasma_widget/contents/ui/: main.qml  qmldir
plasma_widget/src/: AudioEngineWrapper.cpp  AudioEngineWrapper.hpp  VisualizerPlugin.cpp  VisualizerPlugin.hpp
shaders/: composite.frag  particles.vert  quad.frag  quad.vert  visualizer.frag
src/: AnalysisEngine.cpp  AnalysisEngine.hpp  AppState.cpp  AppState.hpp  AudioEngine.cpp  AudioEngine.hpp  ConfigLogic.cpp  ConfigManager.cpp  ConfigManager.hpp  OscMusicEditor.cpp  OscMusicEditor.hpp  ParticleSystem.cpp  ParticleSystem.hpp  RenderManager.cpp  SystemStats.cpp  SystemStats.hpp  UIManager.cpp  UIManager.hpp  VideoRenderManager.cpp  Visualizer.cpp  Visualizer.hpp  main.cpp
src/app/: AppState.cpp  AppState.hpp  AssetPaths.cpp  AssetPaths.hpp  main.cpp
src/audio/: AnalysisEngine.cpp  AnalysisEngine.hpp  AudioEngine.cpp  AudioEngine.hpp  OscMusicEditor.cpp  OscMusicEditor.hpp
src/config/: ConfigLogic.cpp  ConfigLogic.hpp  ConfigManager.cpp  ConfigManager.hpp
src/export/: VideoRenderManager.cpp  VideoRenderManager.hpp
src/platform/: SystemStats.cpp  SystemStats.hpp
src/rendering/: BloomRenderer.cpp  BloomRenderer.hpp  FontAtlas.cpp  FontAtlas.hpp  Framebuffer.cpp  Framebuffer.hpp  ParticleSystem.cpp  ParticleSystem.hpp  RenderManager.cpp  RenderManager.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  Visualizer.cpp  Visualizer.hpp  VisualizerGeometry.cpp  VisualizerGeometry.hpp  VisualizerTypes.hpp  XYOscilloscopeEngine.cpp  XYOscilloscopeEngine.hpp  XYOscilloscopeTypes.hpp
src/ui/: UIHelpers.hpp  UIManager.cpp
src/ui/panels/: AudioSettingsPanel.cpp  BackgroundPanel.cpp  DiagnosticsPanels.cpp  LayerPanels.cpp  PlaybackPanels.cpp
tests/: VisualizerGeometryTests.cpp  XYOscilloscopeEngineTests.cpp
